--- a/themes/werise/layouts/default.htm
+++ b/themes/werise/layouts/default.htm
@@ -18,19 +18,16 @@ description = "Default layout"
     <body>
 
         <!-- Header -->
-        <header id="layout-header">
-            {% partial 'site/header' %}
-        </header>
+        {% partial 'site/nav' %}
 
         <!-- Content -->
         <section id="layout-content">
             {% page %}
         </section>
 
+        {% partial 'contact' %}
         <!-- Footer -->
-        <footer id="layout-footer">
-            {% partial 'site/footer' %}
-        </footer>
+        {% partial 'site/footer' %}
 
         <!-- Scripts -->
         <script src="{{ 'assets/vendor/jquery.js'|theme }}"></script>
