static pages added

--- a/themes/werise/partials/site/header.htm
+++ b/themes/werise/partials/site/header.htm
@@ -18,11 +18,10 @@
                 <h1><span class="font-secondary font-weight-light">Webové aplikácie</span><br>pre vás na mieru</h1>
                 <p class="text-muted text-left ml-lg-0 mr-lg-4 mx-sm-5 py-3">Sme webová agentúra, ktorá vám pripraví všetko pre váš web. Od dizajnu až po jeho propagáciu.</p>
                 <div class="py-4">
-                    <button class="btn btn-primary" href="#">NAŠE SLUŽBY</button>
+                    <a class="btn btn-primary" href="{{ 'sluzby'|page }}">NAŠE SLUŽBY</a>
                 </div>
             </div>
             <div class="col-lg-7 my-lg-auto order-lg-2 my-5 pt-5 pt-lg-0 order-1">
-                <!--                <img src="assets/img/hero_img.svg" alt="" class="h-100 w-100">-->
                 <svg xmlns="http://www.w3.org/2000/svg" class="img-fluid" width="819.75" height="513.637" viewBox="0 0 819.75 513.637">
                     <g id="undraw_content_team_3epn" transform="translate(2.679 0)">
 
